2006-09-27  Paul J Stevens <paul@nfg.nl>

	* timsieve.c:
	minor cleanups
	* debian/dbmail.init:
	fix typo in debian init
	* check_dbmail_imapd.c, debian/control, misc.c:
	switch from gmime2.1 to gmime2.2

2006-09-27  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Fixed typo in g_new0 call (closes bug #418).

2006-09-26  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-imapsession.c:
	Only create INBOX if INBOX doesn't exist, rather than INBOX and
	anything below it (closes bug #417).

2006-09-22  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Changed the query for db_check_sievescript_active_byname (closes bug
	#412).

2006-09-22  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c:
	cleanup dbmail_message_construct
	* modules/dbmysql.c:
	downgrade tracelevel for row=NULL
	* db.c:
	fix typo (closes #411)
	* check_dbmail_util.c:
	activate testcase
	* check_dbmail_message.c, dbmail-message.c, dbmail-message.h:
	add dbmail_message_construct call

2006-09-20  Aaron Stone  <aaron@serendipity.cx>

	* dm_md5.c:
	Moved typedef uint32 above byteReverse function (closes bug #410).

2006-09-19  Paul J Stevens <paul@nfg.nl>

	* db.c, test-scripts/testsort.imap:
	phase-in TRACE macro
	* dbmail-imapsession.c:
	fix bug #408
	* modules/dbsqlite.c:
	revert to old behaviour
	* db.c:
	dm_malloc to g_new0
	* sql/mysql/2_1_7-2_1_8.mysql:
	update mysql create script for envelope cache (closes #409)

2006-09-18  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Don't order POP3 messages by status, only message_idnr.

2006-09-16  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-user.h, maintenance.c:
	Minor cleanup of verbosef, qprintf, qerrorf defines.
	* db.h, db.c:
	Added function db_check_sievescript_active_byname.
	* sievecmd.c:
	Better handling when updating/overwriting scripts by using the
	common -y option to control overwrites.

2006-09-15  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	fix bug #408

2006-09-12  Aaron Stone  <aaron@serendipity.cx>

	* pop3.c, db.c: